--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,8 +12,8 @@ server.error.include-message=always
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=accionistaseebp@gmail.com
-spring.mail.password=mtkgormyerychrzn
+spring.mail.username=eebpsoftware@gmail.com
+spring.mail.password=EEBP2026*
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.debug=true
