--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ server.error.include-message=always
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=eebpsoftware@gmail.com
-spring.mail.password=EEBP2026*
+spring.mail.password=cafpbixxphhmgprn
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.debug=true
